--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:allowBackup="true">
 
         <activity
-            android:name=".activity.PostListActivity"
+            android:name=".view.activity.PostListActivity"
             android:label="@string/app_name">
 
             <intent-filter>
@@ -22,7 +22,7 @@
         </activity>
 
         <activity
-            android:name=".activity.EditPostActivity"
+            android:name=".view.activity.EditPostActivity"
             android:label="@string/app_name" />
     </application>
 
